--- a/tools/new/md editor.html
+++ b/tools/new/md editor.html
@@ -10,8 +10,47 @@
   </style>
 </head>
 <body>
-  <textarea id="editor"># Hello Markdown</textarea>
-  <div id="preview"></div>
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js" defer></script>
+  <style>
+    body { margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(to right, #e0c3fc, #8ec5fc); min-height: 100vh; display: flex; flex-direction: column; }
+    .tool-container { flex: 1; display: flex; justify-content: center; align-items: center; padding: 30px; position: relative; }
+    .tool-box { background: #ffffff; padding: 30px; border-radius: 20px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.15); max-width: 500px; width: 100%; text-align: center; }
+    .title { font-size: 2rem; font-weight: bold; margin-bottom: 10px; }
+    textarea { width: 100%; height: 120px; border-radius: 10px; border: 1px solid #ccc; padding: 10px; font-size: 1rem; margin-bottom: 12px; background: #f8f9fa; }
+    button { padding: 12px 30px; font-size: 1rem; border-radius: 10px; border: none; background: linear-gradient(to right, #2193b0, #6dd5ed); color: #fff; font-weight: bold; cursor: pointer; box-shadow: 0 2px 8px rgba(33,147,176,0.10); transition: background 0.3s; margin-bottom: 18px; }
+    button:hover { background: linear-gradient(to right, #6dd5ed, #2193b0); }
+    .output { background: #f8f9fa; border-radius: 10px; padding: 12px; margin-top: 10px; min-height: 60px; text-align: left; }
+    footer { text-align: center; background: #f9f9f9; border-top: 1px solid #ddd; padding: 20px 10px; font-size: 0.9rem; color: #666; }
+    footer a { color: #0d6efd; margin: 0 10px; text-decoration: none; }
+    footer a:hover { text-decoration: underline; }
+  </style>
+  <div id="header"></div>
+  <div class="tool-container">
+    <div class="tool-box">
+      <div class="title">Markdown Editor</div>
+      <textarea id="mdInput" placeholder="Write markdown..."></textarea>
+      <button onclick="renderMarkdown()">Render</button>
+      <div class="output" id="mdOutput"></div>
+    </div>
+  </div>
+  <script>
+    function renderMarkdown() {
+      const input = document.getElementById('mdInput').value;
+      // Simple markdown to HTML (bold, italic, headers)
+      let html = input
+        .replace(/^# (.*$)/gim, '<h1>$1</h1>')
+        .replace(/^## (.*$)/gim, '<h2>$1</h2>')
+        .replace(/^### (.*$)/gim, '<h3>$1</h3>')
+        .replace(/\*\*(.*?)\*\*/gim, '<b>$1</b>')
+        .replace(/\*(.*?)\*/gim, '<i>$1</i>')
+        .replace(/\n/g, '<br>');
+      document.getElementById('mdOutput').innerHTML = html;
+    }
+  </script>
+  <div id="footer"></div>
+</body>
+</html>
 
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script>
