--- a/tools/new/timer.html
+++ b/tools/new/timer.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+     <script src="/js/script.js" defer></script>
     <meta charset="UTF-8">
     <title>Pomodoro Timer</title>
     <style>
@@ -209,6 +210,7 @@
 </head>
 
 <body>
+    <div id="header"></div>
     <div class="timer-container">
         <svg class="progress-ring" width="200" height="200">
             <circle class="progress-ring-circle" cx="100" cy="100" r="90"></circle>
@@ -398,6 +400,7 @@
         previousTime = '25:00';
         update();
     </script>
+    <div id="footer"></div>
 </body>
 
 </html>
