--- a/tools/tools.html
+++ b/tools/tools.html
@@ -62,6 +62,12 @@
                 <p>Calculate the duration between two dates.</p>
               </a>
             </div>
+            <div class="howto-card color3">
+              <a href="/tools/dateAndTime/timer.html">
+                <h4>Timer</h4>
+                <p>Set and use a countdown timer.</p>
+              </a>
+            </div>
           </div>
         </div>
         <div id="tab-calculators" class="howto-tab-content" style="display:none;">
@@ -78,6 +84,18 @@
               <a href="/tools/calculators/word-counter.html">
                 <h4>Word Counter</h4>
                 <p>Count words, characters, and paragraphs in your text.</p>
+              </a>
+            </div>
+            <div class="howto-card color5">
+              <a href="/tools/calculators/calculator.html">
+                <h4>Calculator</h4>
+                <p>Perform basic and complex arithmetic calculations.</p>
+              </a>
+            </div>
+            <div class="howto-card color5">
+              <a href="/tools/calculators/emi.html">
+                <h4>EMI Calculator</h4>
+                <p>Calculate your loan EMI payments.</p>
               </a>
             </div>
 
@@ -99,8 +117,15 @@
                 <p>Format and play with JSON code.</p>
               </a>
             </div>
+            <div class="howto-card color6">
+              <a href="/tools/codeEditors/md editor.html">
+                <h4>MakrDown Editor</h4>
+                <p>Edit and preview Markdown documents.</p>
+              </a>
+            </div>
           </div>
-          <div id="tab-productivity" class="howto-tab-content" style="display:none;">
+        </div>
+        <div id="tab-productivity" class="howto-tab-content" style="display:none;">
             <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting help.
             </p>
             <div class="howto-tabs-cards">
@@ -122,9 +147,15 @@
                   <p>Split PDF files into separate pages.</p>
                 </a>
               </div>
+              <div class="howto-card color3">
+                <a href="/tools/productivity/qr.html">
+                  <h4>QR Code Generator</h4>
+                  <p>Generate QR codes from text or links.</p>
+                </a>
+              </div>
 
             </div>
-          </div>
+         </div>
           <div id="tab-creativity" class="howto-tab-content" style="display:none;">
             <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting help.
             </p>
@@ -135,6 +166,14 @@
                   <p>Set a countdown for important events.</p>
                 </a>
               </div>
+              <div class="howto-card color4">
+                <a href="/tools/creativity/dice.html">
+                  <h4>Roll Dice</h4>
+                  <p>Roll virtual dice for games or decisions.</p>
+                </a>
+              </div>
+              <div class="howto-tabs-cards">
+              
 
             </div>
           </div>
