04Sep25|Home page

--- a/games/games.html
+++ b/games/games.html
@@ -33,7 +33,7 @@
     </section>
     <section class="games-section">
       <div class="games-section-menu">
-        <div id="sudoku" class="games-div">
+        <div id="sudoku">
           <img class="games-section-img" src="\assets\img\games\sudoku.jpg" alt="">
           <div class="games-card color1">
             <a href="/games/sudoku.html" class="games-section-heading">Sudoku</a>
@@ -53,7 +53,7 @@
           <div class="games-card color3">
             <a href="/games/xo.html" class="games-section-heading">Tic-Tac-Toe</a>
             <p class="games-card-desc">Three in a row, one mind to outsmart! Tic Tac Toe’s a battle of
-              wits.<br>Challenge yourself or a friend.</p>
+              wits. Challenge yourself or a friend.</p>
           </div>
         </div>
       </div>
