--- a/index.html
+++ b/index.html
@@ -25,199 +25,196 @@
       <img class="hero-img" src="/assets/img/homee-2.png" alt="Passion fruit and floral drink on a surface" />
     </section>
 
-    <section class="daily-dose">
-      <h3>Fuel for the Soul</h3>
+    <section class="daily-dose color1">
+      <h2 class="blogs-amazon-heading">Fuel for the Soul</h2>
       <p>🌞 A motivational quote, meme, or fact to brighten your day.</p>
       <blockquote>“The best way to predict the future is to invent it.” – Alan Kay</blockquote>
-      <p>For More Inspiring Quotes <span style="font-size:1.5em;">&#8594;</span></p><button class="toggle"
-        onclick=""></button>
-
+      <p>For More Inspiring Quotes</p>
+      <div class="blogs-btn-wrapper"><a href="/blogs/inspiration/inspiration.html" class="btn">Click Here</a></div>
     </section>
 
     <!-- Game Teaser -->
-    <section class="games-section">
-      <h3>Play to Relax</h3>
+    <section class="games-section color5">
+      <h2 class="blogs-amazon-heading">Play to Relax</h2>
       <div class="games-section-menu">
         <div id="sudoku" class="games-div">
-          <img class="games-section-img" src="/assets/img/sudoku.jpeg" alt="">
-          <a href="/games/sudoku.html" class="games-section-heading">Sudoku</a>
-          <p class="games-section-desc">One grid, nine lives! Sudoku: where logic meets serenity.</p>
+          <img class="games-section-img" src="\assets\img\games\sudoku.jpg" alt="">
+          <div class="games-card color1">
+            <a href="/games/sudoku.html" class="games-section-heading">Sudoku</a>
+            <p class="games-card-desc">One grid, nine lives! Sudoku: where logic meets serenity.<br>Sharpen your mind!
+            </p>
+          </div>
         </div>
         <div id="whereswaldo">
-          <img class="games-section-img" src="/assets/img/games/waldo.jpeg" alt="">
-          <a href="games/wheres-waldo.html" class="games-section-heading">Where's Waldo?</a>
-          <p class="games-section-desc">Blink and you’ll miss him! Waldo’s a masterclass in vanishing acts.</p>
+          <img class="games-section-img" src="\assets\img\games\waldo.jpeg" alt="">
+          <div class="games-card color2">
+            <a href="games.html" class="games-section-heading">Where's Waldo?</a>
+            <p class="games-card-desc">Blink and you’ll miss him! Waldo’s a masterclass in vanishing acts.</p>
+          </div>
         </div>
         <div id="tictactoe">
-          <img class="games-section-img" src="/assets/img/tictactoe.jpeg" alt="">
-          <a href="/games/xo.html" class="games-section-heading">Tic-Tac-Toe</a>
-          <p class="games-section-desc">Three in a row, one mind to outsmart! Tic Tac Toe’s a battle of wits.</p>
+          <img class="games-section-img" src="\assets\img\games\tic-tac-toe.jpg" alt="">
+          <div class="games-card color3">
+            <a href="/games/xo.html" class="games-section-heading">Tic-Tac-Toe</a>
+            <p class="games-card-desc">Three in a row, one mind to outsmart! Tic Tac Toe’s a battle of
+              wits.</p>
+          </div>
         </div>
       </div>
-      <a href="games/games.html" class="btn">Go to Games</a>
+      <div class="games-section-menu">
+        <div id="minesweeper">
+          <img class="games-section-img" src="\assets\img\games\minesweeper.png" alt="">
+          <div class="games-card color4">
+            <a href="/games/minesweeper.html" class="games-section-heading">Minesweeper</a>
+            <p class="games-card-desc">Uncover tiles and avoid the mines in this classic logic game.</p>
+          </div>
+        </div>
+        <div id="memory-match">
+          <img class="games-section-img" src="\assets\img\games\memory-match.png" alt="">
+          <div class="games-card color5">
+            <a href="/games/memory-match.html" class="games-section-heading">Memory Match</a>
+            <p class="games-card-desc">Flip cards and match pairs to train your memory skills.</p>
+          </div>
+        </div>
+        <div id="number-guessing">
+          <img class="games-section-img" src="\assets\img\games\number-guessing.jpg" alt="">
+          <div class="games-card color6">
+            <a href="/games/number-guessing.html" class="games-section-heading">Number Guessing</a>
+            <p class="games-card-desc">Number Guessing.</p>
+          </div>
+        </div>
+      </div>
+      <div class="blogs-btn-wrapper">
+        <a href="games/games.html" class="btn">Go to Games</a>
+      </div>
     </section>
 
     <!-- News Highlights -->
-    <section class="news-flash">
-      <h3>What’s buzzing?</h3>
-      <p>Stay updated with our daily digest of world and pop culture news.</p>
+    <section class="news-flash color9">
+      <h2 class="blogs-amazon-heading">What’s buzzing?</h2>
+      <p>Stay updated with our daily digest of world news.</p>
       <div class="news-section-menu">
         <div>
           <div id="worldNews">
             <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="/news/news.html" class="news-section-heading">World News</a>
-            <p class="news-section-desc">Stay in the know with global headlines that matter.</p>
-          </div>
-          <div id="sportsNews">
-            <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="/news/news.html" class="news-section-heading">Sports News</a>
-            <p class="news-section-desc">Big plays. Bigger moments. Whether it's a match-winning six or a buzzer-beater,
-              we’ve got the highlights, heartbreaks, and heroics.</p>
-          </div>
-          <div id="trending">
-            <!-- <img class = "news-section-img"src="" alt=""> -->
-            <a href="/news/news.html" class="news-section-heading">Trending</a>
-            <p class="news-section-desc">From viral videos to cultural shakeups, here’s what the internet can't stop
-              talking about.</p>
+            <p class="blogs-amazon-subheading">World News</p>
+            <p class="news-section-desc">From diplomacy and climate to tech and trade. We spotlight the headlines that
+              drive policy, innovation, and global change—so you’re always one step ahead.</p>
+            <div class="blogs-btn-wrapper"><a href="/news/news.html" class="btn">Go to News</a></div>
           </div>
         </div>
         <div>
-          <div>
-            <img class="news-section-img" src="/assets/img/news2.jpeg" alt="">
+          <div id="sportsNews">
+            <!-- <img class = "news-section-img"src="" alt=""> -->
+            <p class="blogs-amazon-subheading">Sports News</p>
+            <p class="news-section-desc">Big plays. Bigger moments. Whether it's a match-winning six or a buzzer-beater,
+              we’ve got the highlights, heartbreaks, and heroics.</p>
+            <div class="blogs-btn-wrapper"><a href="/sports/sports.html" class="btn">Go to Sports</a></div>
           </div>
-          <div></div>
         </div>
       </div>
-      <a href="/news/news.html" class="btn">Go to News</a>
     </section>
 
     <!-- Featured Blog -->
-    <section class="blog-preview">
-      <h3>Reader’s Realm</h3>
-      <p>Explore trending thoughts, smart ideas, and original articles you’ll love.</p>
+    <section class="blog-preview color10">
+      <h2 class="blogs-amazon-heading">Reader’s Realm</h2>
+      <p>Dive into the pulse of today’s world—where trending thoughts spark conversation, smart ideas fuel innovation,
+        and original articles offer fresh perspectives you won’t want to miss. Whether you're chasing insight,
+        inspiration, or just a smarter scroll, we’ve curated the stories that matter most to you.</p>
+      <div class="blogs-amazon-section">
+        <p class="blogs-amazon-subheading">Explore Categories</p>
+        <div class="category-cards">
+          <div class="category-card category-gradient color1">
+            <a href="/blogs/amazon/amaz.html" class="category-link">
+              <span>Amazon Picks</span>
+            </a>
+          </div>
+          <div class="category-card category-gradient color2">
+            <a href="/blogs/travel/travel.html" class="category-link">
+              <span>Travelling</span>
+            </a>
+          </div>
+          <div class="category-card category-gradient color3">
+            <a href="/blogs/howto/howto.html" class="category-link">
+              <span>How To</span>
+            </a>
+          </div>
+        </div>
+        <div class="category-cards">
+          <div class="category-card category-gradient color4">
+            <a href="/blogs/finance/finance.html" class="category-link">
+              <span>Finance</span>
+            </a>
+          </div>
+          <div class="category-card category-gradient color5">
+            <a href="/blogs/health/health.html" class="category-link">
+              <span>Health</span>
+            </a>
+          </div>
+          <div class="category-card category-gradient color6">
+            <a href="/blogs/tech/tech.html" class="category-link">
+              <span>Tech</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <p>Click below to see entire collection</p>
+      <div class="blogs-btn-wrapper"><a href="/blogs/blogs.html" class="btn">Go to Blogs</a></div>
 
-      <div class="blogs-section-menu">
-        <div id="sudoku">
-          <img class="blogs-section-img" src="" alt="">
-          <a href="blogs/blogs.html" class="blogs-section-heading">Nature and You</a>
-          <p class="blogs-section-desc">Sustainable living is need of the hour.</p>
-        </div>
-        <div id="whereswaldo">
-          <img class="blogs-section-img" src="" alt="">
-          <a href="blogs/blogs.html" class="blogs-section-heading">Your Style Speaks for You</a>
-          <p class="blogs-section-desc">Latest styling ideas to reinvent your wardrobe.</p>
-        </div>
-      </div>
-      <a href="/blogs/blogs.html" class="btn">Go to Blogs</a>
-      <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
-        <div class="howto-card color1">
-          <a href="/blogs/travel/travel.html">
-            <h4>Travelling</h4>
-            <p>Mist wraps the hills like a secret, and the clouds drift low, whispering tales only silence understands. Each breath of fog feels like a hidden chapter unfolding across the ridges.</p>
-          </a>
-        </div>
-        <div class="howto-card color2">
-          <a href="/blogs/social/social.html">
-            <h4>Social Life</h4>
-            <p>Explore social media trends, content creation, and digital culture shaping our world.</p>
-          </a>
-        </div>
-        <div class="howto-card color3">
-          <a href="/blogs/edu/edu.html">
-            <h4>Education</h4>
-            <p>Develop analytical skills essential for academic success and beyond.</p>
-          </a>
-        </div>
-        <div class="howto-card color4">
-          <a href="/blogs/howto/howto.html">
-            <h4>How To</h4>
-            <p>Discover coding tutorials, tips, and resources for developers.</p>
-          </a>
-        </div>
-        <div class="howto-card color5">
-          <a href="/blogs/inspiration/inspiration.html">
-            <h4>Inspiration</h4>
-            <p>Read how ordinary people overcame extraordinary odds and found success.</p>
-          </a>
-        </div>
-        <div class="howto-card color6">
-          <a href="/blogs/fashion/fashion.html">
-            <h4>Fashion</h4>
-            <p>Latest styling ideas to reinvent your wardrobe.</p>
-          </a>
-        </div>
-      </div>
     </section>
 
     <!-- Tools -->
-    <section class="daily-dose">
-      <h3>Tools</h3>
+    <section class="daily-dose color11">
+      <h2 class="blogs-amazon-heading">Tools</h2>
       <p>Find Useful daily use tools to make life Easy .</p>
-      <a href="/tools/tools.html" class="btn">Go to Tools</a>
-      <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
-        <div class="howto-card color2">
-                <a href="/tools/productivity/notepad.html">
-                  <h4>Notepad</h4>
-                  <p>Take quick notes and save them online.</p>
-                </a>
+      <div class="blogs-amazon-section">
+        <p class="blogs-amazon-subheading">Most Used</p>
+        <div class="category-cards">
+          <div class="category-card category-gradient color1">
+            <a href="/tools/productivity/notepad.html" class="category-link">
+              <span>Notepad</span>
+            </a>
+            <!-- <p>Take quick notes and save them online.</p> -->
           </div>
-        <div class="howto-card color2">
-          <a href="/tools/dateAndTime/date-adder.html">
-            <h4>Date Adder</h4>
-            <p>Add days, months, or years to any date.</p>
-          </a>
+          <div class="category-card category-gradient color2">
+            <a href="/tools/dateAndTime/date-adder.html" class="category-link">
+              <span>Date Adder</span>
+            </a>
+            <!-- <p>Add days, months, or years to any date.</p> -->
+          </div>
+          <div class="category-card category-gradient color3">
+            <a href="/tools/calculators/age-calculator.html" class="category-link">
+              <span>Age Calculator</span>
+            </a>
+            <!-- <p>Calculate your age from your birthdate.</p> -->
+          </div>
         </div>
-        <div class="howto-card color3">
-          <a href="/tools/dateAndTime/date-duration.html">
-            <h4>Date Duration</h4>
-            <p>Calculate the duration between two dates.</p>
-          </a>
+        <div class="category-cards">
+          <div class="category-card category-gradient color4">
+            <a href="/tools/codeEditors/json-formatter.html" class="category-link">
+              <span>JSON Formattor</span>
+            </a>
+            <!-- <p>Format and play with JSON code.</p> -->
+          </div>
+          <div class="category-card category-gradient color5">
+            <a href="/tools/calculators/word-counter.html" class="category-link">
+              <span>Word Counter</span>
+            </a>
+            <!-- <p>Count words, characters, and paragraphs in your text.</p> -->
+          </div>
+          <div class="category-card category-gradient color6">
+            <a href="/tools/creativity/forlater-countdown.html" class="category-link">
+              <span>Event Countdown</span>
+            </a>
+          </div>
         </div>
-        <div class="howto-card color4">
-          <a href="/tools/calculators/age-calculator.html">
-            <h4>Age Calculator</h4>
-            <p>Calculate your age from your birthdate.</p>
-          </a>
-        </div>
-        <div class="howto-card color5">
-          <a href="/tools/calculators/word-counter.html">
-            <h4>Word Counter</h4>
-            <p>Count words, characters, and paragraphs in your text.</p>
-          </a>
-        </div>
-        <div class="howto-card color6">
-                <a href="/tools/codeEditors/json-formatter.html">
-                  <h4>JSON Formattor</h4>
-                  <p>Format and play with JSON code.</p>
-                </a>
-         </div>
       </div>
-      
+      <p>Want to see more useful tools?</p>
+      <div class="blogs-btn-wrapper"><a href="/tools/tools.html" class="btn">Go to Tools</a>
+      </div>
     </section>
   </main>
   <div id="footer"></div>
-  <!-- <footer>
-    <div class="footer-links">
-      <a href="/about-us.html">About Us</a>
-      <a href="/contact-us.html">Contact Us</a>
-      <a href="/privacy.html">Privacy</a>
-    </div>
-    <div class="footer-social">
-      <a href="https://twitter.com/ultimatrix" target="_blank" rel="noopener" aria-label="Twitter">
-        <svg><path d="M22.46 6c-.77.35-1.6.59-2.47.7a4.3 4.3 0 0 0 1.88-2.37c-.83.5-1.75.87-2.72 1.07A4.28 4.28 0 0 0 12 9.03c0 .34.04.67.1.99C8.09 9.86 4.8 8.13 2.67 5.5c-.37.64-.58 1.38-.58 2.17 0 1.5.77 2.83 1.94 3.61-.72-.02-1.4-.22-1.99-.55v.06c0 2.1 1.49 3.85 3.47 4.25-.36.1-.74.16-1.13.16-.28 0-.54-.03-.8-.08.54 1.7 2.12 2.94 3.99 2.97A8.6 8.6 0 0 1 2 19.54c-.34 0-.67-.02-1-.06A12.13 12.13 0 0 0 7.29 21c7.55 0 11.68-6.26 11.68-11.68 0-.18-.01-.36-.02-.54A8.18 8.18 0 0 0 24 4.59a8.2 8.2 0 0 1-2.36.65z"></path></svg>
-      </a>
-      <a href="https://facebook.com/ultimatrix" target="_blank" rel="noopener" aria-label="Facebook">
-        <svg><path d="M22.675 0h-21.35C.6 0 0 .6 0 1.326v21.348C0 23.4.6 24 1.326 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.92.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.4 24 24 23.4 24 22.674V1.326C24 .6 23.4 0 22.675 0"></path></svg>
-      </a>
-      <a href="https://instagram.com/ultimatrix" target="_blank" rel="noopener" aria-label="Instagram">
-        <svg><path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.334 3.608 1.308.974.974 1.246 2.242 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.334 2.633-1.308 3.608-.974.974-2.242 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.334-3.608-1.308-.974-.974-1.246-2.242-1.308-3.608C2.175 15.647 2.163 15.267 2.163 12s.012-3.584.07-4.85c.062-1.366.334-2.633 1.308-3.608.974-.974 2.242-1.246 3.608-1.308C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.013 7.052.072 5.771.131 4.659.363 3.678 1.344c-.98.98-1.213 2.092-1.272 3.374C2.013 8.332 2 8.741 2 12c0 3.259.013 3.668.072 4.948.059 1.282.292 2.394 1.272 3.374.98.98 2.092 1.213 3.374 1.272C8.332 23.987 8.741 24 12 24c3.259 0 3.668-.013 4.948-.072 1.282-.059 2.394-.292 3.374-1.272.98-.98 1.213-2.092 1.272-3.374.059-1.28.072-1.689.072-4.948 0-3.259-.013-3.668-.072-4.948-.059-1.282-.292-2.394-1.272-3.374-.98-.98-2.092-1.213-3.374-1.272C15.668.013 15.259 0 12 0zm0 5.838A6.162 6.162 0 0 0 5.838 12 6.162 6.162 0 0 0 12 18.162 6.162 6.162 0 0 0 18.162 12 6.162 6.162 0 0 0 12 5.838zm0 10.162A4 4 0 1 1 12 8a4 4 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 1-2.88 0 1.44 1.44 0 0 1 2.88 0z"></path></svg>
-      </a>
-      <a href="https://linkedin.com/company/ultimatrix" target="_blank" rel="noopener" aria-label="LinkedIn">
-        <svg><path d="M20.447 20.452h-3.554v-5.569c0-1.327-.027-3.037-1.849-3.037-1.851 0-2.132 1.445-2.132 2.939v5.667H9.358V9h3.414v1.561h.049c.476-.9 1.637-1.849 3.37-1.849 3.602 0 4.267 2.369 4.267 5.455v6.285zM5.337 7.433a2.062 2.062 0 1 1 0-4.124 2.062 2.062 0 0 1 0 4.124zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .771 0 1.723v20.549C0 23.229.792 24 1.771 24h20.451C23.2 24 24 23.229 24 22.272V1.723C24 .771 23.2 0 22.225 0z"></path></svg>
-      </a>
-    </div>
-    <p>© 2025 Ultimatrix. All rights reserved.</p>
-  </footer> -->
 </body>
 
 </html>
