--- a/contact-us.html
+++ b/contact-us.html
@@ -43,9 +43,9 @@
             <div id="tab-date" class="howto-tab-content" style="display:block;">
                 <p class="blogs-amazon-subheading">Other Ways to Contact</p>
                 <p class="blogs-month-desc">
-                    Email: <a href="mailto:support@ultimatrix.com">support@ultimatrix.com</a><br>
-                    Twitter: <a href="https://twitter.com/ultimatrix" target="_blank">@ultimatrix</a><br>
-                    Instagram: <a href="https://instagram.com/ultimatrix" target="_blank">@ultimatrix</a><br>
+                    Email: <a href="mailto:ultimatrixw@gmail.com">ultimatrixw@gmail.com</a><br>
+                    Twitter: <a href="https://x.com/Ultimatrix_W" target="_blank">@ultimatrix_w</a><br>
+                    Instagram: <a href="https://www.instagram.com/ultimatrix_world/" target="_blank">@ultimatrix_world</a><br>
                 </p>
             </div>
         </section>
