10Sep25|News Trending, Sports Search

--- a/sports/sports.html
+++ b/sports/sports.html
@@ -45,23 +45,31 @@
         <section class="sports-tiles">
             <div class="tile cricket color1">
                 <h3>🏏 Cricket</h3>
-                <p>India vs SA: Match tomorrow at 5PM</p>
+                <p>India vs South Africa: 1st Test begins tomorrow at 9:30 AM IST</p>
                 <p>Venue: Eden Gardens, Kolkata</p>
+                <p>Series: South Africa tour of India 2025</p>
+                <p>Duration: Nov 14–18</p>
             </div>
             <div class="tile football color2">
                 <h3>⚽ Football</h3>
-                <p>Manchester United vs Real Madrid</p>
-                <p>Kick-off: Tonight at 11:30PM IST</p>
+                <p>Manchester United vs Real Madrid: Club Friendly tonight at 11:30PM IST</p>
+                <p>Venue: Old Trafford, Manchester</p>
+                <p>Watch Live: MUTV & Real Madrid TV</p>
             </div>
             <div class="tile superbowl color3">
                 <h3>🏈 Super Bowl</h3>
-                <p>Super Bowl LIX: Chiefs vs 49ers</p>
-                <p>Countdown: 10 days to kickoff</p>
+                <p>Super Bowl LIX: Chiefs vs Eagles — Rematch of Super Bowl LVII</p>
+                <p>Kickoff: Feb 9, 2025 at 6:30 PM ET (5:00 AM IST, Feb 10)</p>
+                <p>Venue: Caesars Superdome, New Orleans</p>
+                <p>Halftime Show: Kendrick Lamar ft. SZA</p>
+                <p>Broadcast: FOX, Telemundo, Tubi (Streaming)</p>
             </div>
             <div class="tile chess color4">
                 <h3>♟️ Chess</h3>
-                <p>FIDE Grand Prix Round 3</p>
-                <p>Carlsen vs Nepomniachtchi</p>
+                <p>FIDE Grand Swiss 2025: Round 3 concluded in Samarkand, Uzbekistan</p>
+                <p>Top Clash: Maghsoodloo defeated Firouzja to take sole lead</p>
+                <p>Carlsen & Nepomniachtchi both drew their Round 3 games</p>
+                <p>Next Round: Sept 11 at 3:30 PM IST</p>
             </div>
             <div class="tile tennis color5">
                 <h3>🎾 Tennis</h3>
@@ -86,7 +94,7 @@
             </div>
         </section> -->
         <!-- Main News Section -->
-        <section id="dynamic-news-feed">
+        <!-- <section id="dynamic-news-feed">
             <section id="headlines-section" class="sports-section">
                 <p class="sports-section-heading">Top Headlines</p>
             </section>
@@ -102,7 +110,7 @@
             <section id="earlier-section" class="sports-section">
                 <p class="sports-section-heading">Earlier News</p>
             </section>
-        </section>
+        </section> -->
     </main>
     <div id="footer"></div>
 </body>
