--- a/contact-us.html
+++ b/contact-us.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/blogs.css" />
     <link rel="stylesheet" href="/css/contact-us.css" />
     <script src="/js/script.js" defer></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9364127030923496"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
